--- a/src/css/style.css
+++ b/src/css/style.css
@@ -190,7 +190,7 @@ body {
 .hk-nav-item_name {
   visibility: hidden;
   transition: all 0.3s;
-  padding-right: 30px;
+  padding-right: 28px;
   cursor: context-menu;
 }
 
@@ -499,13 +499,153 @@ p.hk-about-descr {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   margin-top: 100px;
+  position: relative;
+}
+
+.hk-hacken-figure > div {
+  position: absolute;
+}
+
+#hacken-1 {
+    top: 110px;
+    left: 121px;
+    font-size: 22px;
+    font-weight: 300;
+}
+
+#hacken-2 {
+    top: 167px;
+    right: 150px;
+    font-size: 22px;
+    font-weight: 300;
+}
+
+#hacken-3 {
+    top: 275px;
+    left: 205px;
+    font-size: 22px;
+    font-weight: 500;
+}
+
+#hacken-4 {
+    bottom: 80px;
+    right: 80px;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+#hacken-5 {
+    bottom: 55px;
+    left: 80px;
+    font-size: 16px;
+    font-weight: 300;
 }
 
 .hk-milestones {
   background-color: #282828;
 }
 
-.hk-ico {
+.hk-milestones .hk-central_block {
+    align-items: baseline;
+}
+
+.hk-milestones .hk-central_block>div {
+    margin-top: 50px;
+}
+
+.hk-milestones h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 46px;
+    font-weight: 100;
+}
+
+.hk-milestones-block_headers {
+    width: 100%;
+    height: 200px;
+}
+
+.hk-milestones-block_headers > div {
+    display: inline-block;
+    width: 20%;
+
+    box-sizing: border-box;
+    padding-left: 30px;
+}
+
+.hk-milestones-block_headers > div + div {
+    margin-left: -4px;
+}
+
+.hk-milestones-block_headers > div h4 {
+  text-transform: capitalize;
+  font-size: 22px;
+font-weight: 500;
+color: #55c3c8;
+}
+
+.hk-milestones-block_headers p {
+  font-size: 16px;
+  font-weight: 300;
+      margin-top: 30px;
+}
+
+.hk-milestones-block_cards {
+  width: 100%;
+  height: 360px;
+}
+
+.hk-milestones-block_cards > div {
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+      box-sizing: border-box;
+}
+
+.hk-milestones-block_cards > div + div {
+    margin-left: -4px;
+}
+
+.hk-milestones-block {
+    height: 100%;
+}
+
+.hk-milestones-block.hk-block-1 {
+    background: #2f3f40;
+}
+
+.hk-milestones-block.hk-block-2 {
+    background: #365a5b;
+}
+
+.hk-milestones-block.hk-block-3 {
+    background: #4d7876;
+}
+
+.hk-milestones-block.hk-block-4 {
+    background: #539897;
+}
+
+.hk-milestones-block.hk-block-5 {
+    background: #55c3c8;
+}
+
+.hk-milestones-block p {
+    padding: 0 30px;
+    font-size: 16px;
+    font-weight: 100;
+    line-height: 24px;
+}
+
+.hk-bolder {
+  font-weight: 700;
+}
+
+.hk-bold {
+  font-weight: 300;
+}
+
+.hk-token_sale {
   background-color: #2f2f2f;
 }
 
