--- a/src/css/style.css
+++ b/src/css/style.css
@@ -845,3 +845,97 @@ h2 + hr {
   margin-left: 5px;
   color: #55c3c8;
 }
+
+.hk-partners h2{
+  text-align: left;
+}
+
+.hk-partners .hk-header {
+  position: absolute;
+  bottom: 38px;
+  left: 0;
+  z-index: 1;
+}
+
+.partners-slider .swiper-pagination-fraction {
+  font-size: 22px;
+  font-weight: 100;
+}
+
+.partners-slider .swiper-wrapper {
+  margin-top: 15vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.slider-pagination {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.slider-pagination .swiper-button-prev,
+.slider-pagination .swiper-button-next{
+  position: relative;
+  width: 50px;
+  height: 23px;
+  z-index: 10;
+}
+
+.slider-pagination .swiper-button-prev {
+  transform: rotateY(180deg);
+}
+
+.slider-pagination .swiper-button-prev:after,
+.slider-pagination .swiper-button-next:after{
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 50px;
+  height: 1px;
+  background-color: #fff;
+}
+
+.slider-pagination .swiper-button-prev:before,
+.slider-pagination .swiper-button-next:before{
+  content: '';
+  position: absolute;
+  top: 5px;
+  right: -1px;
+  width: 20px;
+  height: 1px;
+  background-color: #fff;
+  transform: rotate(34deg);
+}
+
+.block-title-with-pagination {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.block-title-with-pagination .slider-pagination {
+  margin-right: 15%;
+}
+
+.hk-team h2 {
+  text-align: left;
+}
+
+.hk-team .slider-pagination {
+  justify-content: flex-start;
+}
+
+.hk-team .not-relative {
+  display: flex;
+  flex-direction: row;
+}
+
+.team-slider .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 400px;
+  border-bottom: 1px solid #31a4b2;
+}
