--- a/src/css/style.css
+++ b/src/css/style.css
@@ -823,6 +823,92 @@ box-sizing: border-box;
   background-color: #282828;
 }
 
+.hk-bonuses .hk-central_block {
+    align-items: baseline;
+}
+
+.hk-bonuses .hk-central_block>div {
+    margin-top: 50px;
+}
+
+.hk-bonuses h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 46px;
+    font-weight: 100;
+}
+
+.hk-bonuses p {
+  text-align: center;
+  color: #31a4b2;
+  font-size: 30px;
+  font-weight: 100;
+}
+
+.hk-bonuses-figure {
+    height: 500px;
+    width: 100%;
+    margin: auto;
+    margin-top: 100px;
+    position: relative;
+}
+
+.hk-bonus_timer {
+    height: 340px;
+    width: 640px;
+    border: 10px solid #31a4b2;
+    display: block;
+    float: left;
+    position: relative;
+}
+
+.hk-bonuse-circle_container {
+  display: block;
+    float: left;
+    width: 470px;
+}
+
+.hk-bonus_circle {
+    height: 150px;
+    width: 150px;
+    margin-left: 80px;
+    margin-bottom: 65px;
+    border-radius: 50%;
+    display: inline-block;
+    background: #2f2f2f;
+    text-align: center;
+}
+
+.hk-bonus_circle.bonus_active {
+    background: #2b3131;
+}
+
+.hk-bonus_percent {
+    color: #ffffff;
+    font-size: 40px;
+    font-weight: 900;
+    display: block;
+    margin-top: 40px;
+}
+
+.hk-bonus_circle.bonus_active .hk-bonus_percent {
+    color: #31a4b2;
+}
+
+.hk-bonus_time {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 30px;
+}
+
+.hk-bonus_timer p {
+    color: #ffffff;
+}
+
+.hk-bonus_timer hr {
+    margin: auto;
+}
+
 .hk-bounty {
   background-color: #303030;
 }
