--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,14 +58,14 @@ body {
   margin-top: 50px;
 }
 
-.hk-social-link a{
+.hk-social-link a {
   padding: 0px 20px;
   color: #fff;
   transition: .15s ease-in-out;
   font-size: 20px;
 }
 
-.hk-social-link a:hover{
+.hk-social-link a:hover {
   color: #31a4b2;
 }
 
@@ -89,8 +89,7 @@ body {
   transition: .15s ease-in-out;
 }
 
-#hk-language-select a:hover,
-#hk-language-select a.active {
+#hk-language-select a:hover, #hk-language-select a.active {
   color: #31a4b2;
   text-decoration: underline;
 }
@@ -351,7 +350,6 @@ hr {
   z-index: -1;
 }
 
-
 p.hk-about-descr {
   font-size: 16px;
   font-weight: 100;
@@ -519,43 +517,43 @@ p.hk-about-descr {
   position: relative;
 }
 
-.hk-hacken-figure > div {
+.hk-hacken-figure>div {
   position: absolute;
 }
 
 #hacken-1 {
-    top: 110px;
-    left: 121px;
-    font-size: 22px;
-    font-weight: 300;
+  top: 110px;
+  left: 121px;
+  font-size: 22px;
+  font-weight: 300;
 }
 
 #hacken-2 {
-    top: 167px;
-    right: 150px;
-    font-size: 22px;
-    font-weight: 300;
+  top: 167px;
+  right: 150px;
+  font-size: 22px;
+  font-weight: 300;
 }
 
 #hacken-3 {
-    top: 275px;
-    left: 205px;
-    font-size: 22px;
-    font-weight: 500;
+  top: 275px;
+  left: 205px;
+  font-size: 22px;
+  font-weight: 500;
 }
 
 #hacken-4 {
-    bottom: 80px;
-    right: 80px;
-    font-size: 16px;
-    font-weight: 300;
+  bottom: 80px;
+  right: 80px;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 #hacken-5 {
-    bottom: 55px;
-    left: 80px;
-    font-size: 16px;
-    font-weight: 300;
+  bottom: 55px;
+  left: 80px;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 .hk-milestones {
@@ -567,48 +565,47 @@ p.hk-about-descr {
 }
 
 .hk-milestones .hk-central_block {
-    align-items: baseline;
+  align-items: baseline;
 }
 
 .hk-milestones .hk-central_block>div {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .hk-milestones h2 {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 46px;
-    font-weight: 100;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 46px;
+  font-weight: 100;
 }
 
 .hk-milestones-block_headers {
-    width: 100%;
-    height: 200px;
+  width: 100%;
+  height: 200px;
 }
 
-.hk-milestones-block_headers > div {
-    display: inline-block;
-    width: 20%;
-
-    box-sizing: border-box;
-    padding-left: 30px;
+.hk-milestones-block_headers>div {
+  display: inline-block;
+  width: 20%;
+  box-sizing: border-box;
+  padding-left: 30px;
 }
 
-.hk-milestones-block_headers > div + div {
-    margin-left: -4px;
+.hk-milestones-block_headers>div+div {
+  margin-left: -4px;
 }
 
-.hk-milestones-block_headers > div h4 {
+.hk-milestones-block_headers>div h4 {
   text-transform: capitalize;
   font-size: 22px;
-font-weight: 500;
-color: #55c3c8;
+  font-weight: 500;
+  color: #55c3c8;
 }
 
 .hk-milestones-block_headers p {
   font-size: 16px;
   font-weight: 300;
-      margin-top: 30px;
+  margin-top: 30px;
 }
 
 .hk-milestones-block_cards {
@@ -616,46 +613,46 @@ color: #55c3c8;
   height: 360px;
 }
 
-.hk-milestones-block_cards > div {
+.hk-milestones-block_cards>div {
   display: inline-block;
   vertical-align: top;
   width: 20%;
-      box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.hk-milestones-block_cards > div + div {
-    margin-left: -4px;
+.hk-milestones-block_cards>div+div {
+  margin-left: -4px;
 }
 
 .hk-milestones-block {
-    height: 100%;
+  height: 100%;
 }
 
 .hk-milestones-block.hk-block-1 {
-    background: #2f3f40;
+  background: #2f3f40;
 }
 
 .hk-milestones-block.hk-block-2 {
-    background: #365a5b;
+  background: #365a5b;
 }
 
 .hk-milestones-block.hk-block-3 {
-    background: #4d7876;
+  background: #4d7876;
 }
 
 .hk-milestones-block.hk-block-4 {
-    background: #539897;
+  background: #539897;
 }
 
 .hk-milestones-block.hk-block-5 {
-    background: #55c3c8;
+  background: #55c3c8;
 }
 
 .hk-milestones-block p {
-    padding: 0 30px;
-    font-size: 16px;
-    font-weight: 100;
-    line-height: 24px;
+  padding: 0 30px;
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 24px;
 }
 
 .hk-white {
@@ -677,6 +674,7 @@ color: #55c3c8;
 .hk-token_sale {
   background-color: #2f2f2f;
 }
+
 .hk-token_sale .hk-central_block {
   align-items: baseline;
 }
@@ -703,20 +701,22 @@ color: #55c3c8;
   position: relative;
 }
 
-.hk-token_sale-figure > div {
+.hk-token_sale-figure>div {
   position: absolute;
 }
 
 .hk-burning {
   background-color: #282828;
 }
+
 .hk-burning .hk-central_block {
-    align-items: baseline;
+  align-items: baseline;
 }
 
 .hk-burning .hk-central_block>div {
-    margin-top: 50px;
+  margin-top: 50px;
 }
+
 .hk-burning h2 {
   font-size: 46px;
   font-weight: 100;
@@ -741,15 +741,15 @@ color: #55c3c8;
 }
 
 .hk-burning-quote_text:before {
-    content: '“';
-    position: absolute;
-    top: 90px;
-    left: -15px;
-    font-family: 'ProximaNova', sans-serif;
-    font-weight: 500;
-    font-size: 400px;
-    color: #383838;
-    z-index: -1;
+  content: '“';
+  position: absolute;
+  top: 90px;
+  left: -15px;
+  font-family: 'ProximaNova', sans-serif;
+  font-weight: 500;
+  font-size: 400px;
+  color: #383838;
+  z-index: -1;
 }
 
 p.hk-burning-descr {
@@ -764,11 +764,11 @@ p.hk-burning-descr {
 }
 
 .hk-details .hk-central_block {
-    align-items: baseline;
+  align-items: baseline;
 }
 
 .hk-details .hk-central_block>div {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .hk-details h2 {
@@ -776,7 +776,6 @@ p.hk-burning-descr {
   font-weight: 100;
   text-transform: uppercase;
 }
-
 
 .hk-details-quote_text {
   position: relative;
@@ -787,7 +786,6 @@ p.hk-burning-descr {
   color: #31a4b2;
   margin-top: 60px;
 }
-
 
 .hk-details p {
   width: 33%;
@@ -800,7 +798,7 @@ p.hk-burning-descr {
   float: left;
   width: 60%;
   padding-left: 80px;
-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .hk-details-pane {
@@ -824,18 +822,18 @@ box-sizing: border-box;
 }
 
 .hk-bonuses .hk-central_block {
-    align-items: baseline;
+  align-items: baseline;
 }
 
 .hk-bonuses .hk-central_block>div {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .hk-bonuses h2 {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 46px;
-    font-weight: 100;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 46px;
+  font-weight: 100;
 }
 
 .hk-bonuses p {
@@ -846,71 +844,159 @@ box-sizing: border-box;
 }
 
 .hk-bonuses-figure {
-    height: 500px;
-    width: 100%;
-    margin: auto;
-    margin-top: 100px;
-    position: relative;
+  height: 500px;
+  width: 100%;
+  margin: auto;
+  margin-top: 100px;
+  position: relative;
 }
 
 .hk-bonus_timer {
-    height: 340px;
-    width: 640px;
-    border: 10px solid #31a4b2;
-    display: block;
-    float: left;
-    position: relative;
+  height: 340px;
+  width: 640px;
+  border: 10px solid #31a4b2;
+  display: block;
+  float: left;
+  position: relative;
 }
 
 .hk-bonuse-circle_container {
   display: block;
-    float: left;
-    width: 470px;
+  float: left;
+  width: 470px;
 }
 
 .hk-bonus_circle {
-    height: 150px;
-    width: 150px;
-    margin-left: 80px;
-    margin-bottom: 65px;
-    border-radius: 50%;
-    display: inline-block;
-    background: #2f2f2f;
-    text-align: center;
+  height: 150px;
+  width: 150px;
+  margin-left: 80px;
+  margin-bottom: 65px;
+  border-radius: 50%;
+  display: inline-block;
+  background: #2f2f2f;
+  text-align: center;
 }
 
 .hk-bonus_circle.bonus_active {
-    background: #2b3131;
+  background: #2b3131;
 }
 
 .hk-bonus_percent {
-    color: #ffffff;
-    font-size: 40px;
-    font-weight: 900;
-    display: block;
-    margin-top: 40px;
+  color: #ffffff;
+  font-size: 40px;
+  font-weight: 900;
+  display: block;
+  margin-top: 40px;
 }
 
 .hk-bonus_circle.bonus_active .hk-bonus_percent {
-    color: #31a4b2;
+  color: #31a4b2;
 }
 
 .hk-bonus_time {
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 30px;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 30px;
 }
 
 .hk-bonus_timer p {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .hk-bonus_timer hr {
-    margin: auto;
+  margin: auto;
 }
 
 .hk-bounty {
   background-color: #303030;
+}
+
+.hk-bounty .hk-central_block {
+  align-items: baseline;
+}
+
+.hk-bounty .hk-central_block>div {
+  margin-top: 50px;
+}
+
+.hk-bounty h2 {
+  font-size: 46px;
+  font-weight: 100;
+  text-transform: uppercase;
+}
+
+.hk-bounty-quote_text {
+  position: relative;
+  z-index: 1;
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 100;
+  color: #31a4b2;
+  margin-top: 60px;
+}
+
+.hk-bounty p {
+  width: 33%;
+  float: left;
+  padding-left: 90px;
+  box-sizing: border-box;
+}
+
+.hk-bounty-panes_container {
+  float: left;
+  width: 60%;
+  padding-left: 80px;
+  box-sizing: border-box;
+}
+
+.hk-bounty-pane {
+  width: 33%;
+  min-width: 150px;
+  float: left;
+  box-sizing: border-box;
+  font-size: 22px;
+  font-weight: 100;
+  line-height: 28px;
+}
+
+.hk-bounty-pane h6 {
+  font-size: 22px;
+  font-weight: 100;
+  text-transform: capitalize;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.hk-bounty_diagramm {
+  height: 150px;
+  width: 150px;
+  margin: auto;
+  font-size: 40px;
+  font-weight: 300;
+  text-align: center;
+  box-sizing: border-box;
+  padding-top: 60px;
+}
+
+.hk-diagramm_10 {
+  background: url("../img/bounty-10.png");
+  background-size: contain;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+
+.hk-diagramm_15 {
+  background: url("../img/bounty-15.png");
+  background-size: contain;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+
+.hk-diagramm_40 {
+  background: url("../img/bounty-40.png");
+  background-size: contain;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 
 .hk-team {
@@ -932,7 +1018,6 @@ box-sizing: border-box;
   left: 0;
 }
 
-
 .margin-none {
   margin: 0 !important;
 }
@@ -945,22 +1030,14 @@ box-sizing: border-box;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
-.hk-about,
-.hk-token_sale,
-.hk-partners,
-.hk-bounty,
-.hk-details {
+.hk-about, .hk-token_sale, .hk-partners, .hk-bounty, .hk-details {
   position: relative;
 }
 
-.hk-about:after,
-.hk-token_sale:after,
-.hk-partners:after,
-.hk-bounty:after,
-.hk-details:after {
+.hk-about:after, .hk-token_sale:after, .hk-partners:after, .hk-bounty:after, .hk-details:after {
   position: absolute;
   top: 0;
   left: 0;
@@ -980,11 +1057,7 @@ box-sizing: border-box;
   background-color: #313131;
 }
 
-.hk-main,
-.hk-timeline,
-.hk-burning,
-.hk-team,
-.hk-bonuses {
+.hk-main, .hk-timeline, .hk-burning, .hk-team, .hk-bonuses {
   background-attachment: local;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1011,7 +1084,7 @@ box-sizing: border-box;
   background-image: url(./../img/bonuses-bg.png);
 }
 
-h2 + hr {
+h2+hr {
   margin: 50px 0;
 }
 
