--- a/src/css/style.css
+++ b/src/css/style.css
@@ -358,6 +358,19 @@ p.hk-about-descr {
 }
 
 
+.video-container {
+  position: absolute;
+  top: 0;
+  z-index: 8;
+  background: black;
+  width: 100vw;
+  height: 100vh;
+}
+
+#video-loader {
+  width: 100%;
+}
+
 /*SLIDE 3*/
 
 .hk-timeline {
