--- a/src/css/style.css
+++ b/src/css/style.css
@@ -623,7 +623,7 @@ p.hk-about-descr {
 
 .hk-milestones-block_cards {
   width: 100%;
-  height: 360px;
+  height: 400px;
 }
 
 .hk-milestones-block_cards>div {
@@ -810,7 +810,7 @@ p.hk-burning-descr {
 .hk-details-panes_container {
   float: left;
   width: 71%;
-  padding-left: 40px;
+  padding-left: 80px;
   box-sizing: border-box;
 }
 
@@ -874,10 +874,12 @@ p.hk-burning-descr {
 }
 
 .hk-bonus_timer-time {
-  height: calc(100% - 95px);
+  height: calc(100% - 145px);
   display: flex;
   justify-content: space-around;
   align-items: center;
+  width: 500px;
+margin: auto;
 }
 
 .hk-bonus_timer-time__main {
@@ -893,7 +895,7 @@ p.hk-burning-descr {
 }
 
 .timetick-time {
-  padding-bottom: 10px;
+  padding-bottom: 0;
   color: #31a4b2;
   font-size: 40px;
   font-weight: 900;
@@ -905,7 +907,7 @@ p.hk-burning-descr {
   opacity: 0.7;
   font-size: 16px;
   font-weight: 100;
-  line-height: 30px;
+  line-height: 16px;
 }
 
 
