--- a/src/css/style.css
+++ b/src/css/style.css
@@ -357,7 +357,6 @@ p.hk-about-descr {
   max-width: 400px;
 }
 
-
 .video-container {
   position: absolute;
   top: 0;
@@ -399,7 +398,7 @@ p.hk-about-descr {
   background: url("../img/hk-timeline.png");
   background-repeat: no-repeat;
   background-position: 50% 60px;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 .hk-timeline-line-1 {
@@ -526,7 +525,7 @@ p.hk-about-descr {
   background: url("../img/hacken-bg.png");
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  margin-top: 100px;
+  margin-top: 60px;
   position: relative;
 }
 
@@ -573,10 +572,6 @@ p.hk-about-descr {
   background-color: #282828;
 }
 
-.hk-milestones .absolute-center {
-  width: 72%;
-}
-
 .hk-milestones .hk-central_block {
   align-items: baseline;
 }
@@ -590,11 +585,12 @@ p.hk-about-descr {
   text-transform: uppercase;
   font-size: 46px;
   font-weight: 100;
+  margin-bottom: 10px;
 }
 
 .hk-milestones-block_headers {
   width: 100%;
-  height: 200px;
+  height: 175px;
 }
 
 .hk-milestones-block_headers>div {
@@ -618,12 +614,13 @@ p.hk-about-descr {
 .hk-milestones-block_headers p {
   font-size: 16px;
   font-weight: 300;
-  margin-top: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .hk-milestones-block_cards {
   width: 100%;
-  height: 400px;
+  height: 435px;
 }
 
 .hk-milestones-block_cards>div {
@@ -711,7 +708,7 @@ p.hk-about-descr {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: contain;
-  margin-top: 100px;
+  margin-top: 60px;
   position: relative;
 }
 
@@ -879,7 +876,7 @@ p.hk-burning-descr {
   justify-content: space-around;
   align-items: center;
   width: 500px;
-margin: auto;
+  margin: auto;
 }
 
 .hk-bonus_timer-time__main {
@@ -910,11 +907,11 @@ margin: auto;
   line-height: 16px;
 }
 
-
 .hk-bonuse-circle_container {
   display: block;
   float: left;
   width: calc(100% - 640px);
+  max-width: 540px;
 }
 
 .hk-bonus_circle {
@@ -1151,4 +1148,54 @@ h2+hr {
   font-size: 23px;
   margin-left: 5px;
   color: #55c3c8;
+}
+
+@media (min-width: 1224px) and (max-width: 1539px) {
+  .hk-header {
+    padding-left: 80px;
+  }
+  .hk-central_block {
+    margin-left: 80px;
+  }
+  .hk-main h1 {
+    font-size: 52px;
+    margin-bottom: 60px;
+  }
+  .hk-main .hk-central_block p {
+    font-size: 26px;
+    margin-bottom: 50px;
+  }
+  .hk-time {
+    padding-left: 80px;
+  }
+  .hk-time-header, .hk-amount-header {
+    font-size: 22px;
+    padding-top: 5px;
+    float: none;
+    text-align: center;
+  }
+  .hk-amount-number {
+    float: none;
+    padding-left: 4px;
+    padding-top: 18px;
+    text-align: center;
+  }
+  .hk-amount-header {
+    padding-left: 4px;
+  }
+  .hk-bonus_timer-time__main {
+    height: 100px;
+  }
+  .hk-about h2 {
+    font-size: 40px;
+  }
+  .hk-about p {
+    padding-left: 40px;
+  }
+  .hk-about-quote_text {
+    font-size: 25px;
+  }
+  h2+hr {
+    margin: 30px 0;
+  }
 }
