--- a/src/css/style.css
+++ b/src/css/style.css
@@ -586,13 +586,16 @@ p.hk-about-descr {
   font-size: 46px;
   font-weight: 100;
   margin-bottom: 10px;
+  margin-top: 0;
 }
 
 .hk-milestones-block_headers {
   width: 100%;
   height: 175px;
 }
-
+.hk-milestones .absolute-center {
+width: calc(100% - 480px);
+}
 .hk-milestones-block_headers>div {
   display: inline-block;
   width: 20%;
