--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1253,7 +1253,7 @@ h2+hr {
 }
 
 .team-slider {
-  margin-top: 60px;
+  margin-top: 20px;
 }
 
 .team-slider .swiper-container {
@@ -1268,7 +1268,7 @@ h2+hr {
 
 
 .team-slider .swiper-slide .team-image, .team-image-active {
-  max-width: 100%;
+  max-width: 280px;
   height: auto;
   border-bottom: 1px solid #31a4b2;
 }
@@ -1304,11 +1304,19 @@ h2+hr {
 }
 
 .team-slider .member-description {
-  font-size: 15px;
-      line-height: 1.6;
+  font-size: 13px;
+      line-height: 1.5;
       text-align: justify;
       font-weight: 100;
-          margin-top: 20px;
+          margin-top: 13px;
+}
+
+.team-slider .member-description-last {
+  font-size: 12px;
+  line-height: 1.3;
+  text-align: justify;
+  font-weight: 100;
+  margin-top: 13px;
 }
 
 @media (min-width: 1224px) and (max-width: 1539px) {
