--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1225,10 +1225,11 @@ h2+hr {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
 }
 
 .block-title-with-pagination .slider-pagination {
-  margin-right: 15%;
+  flex: 1;
 }
 
 .hk-team h2 {
@@ -1240,7 +1241,7 @@ h2+hr {
 }
 
 .hk-team .not-relative {
-  /*display: flex;*/
+  display: flex;
   /*flex-direction: row;*/
 }
 
@@ -1259,7 +1260,7 @@ h2+hr {
 }
 
 .team-slider .swiper-container {
-  width: 1000px;
+  width: 825px;
 }
 
 .team-slider .swiper-slide {
@@ -1306,17 +1307,17 @@ h2+hr {
 }
 
 .team-slider .member-description {
-  font-size: 13px;
+  font-size: 14px;
       line-height: 1.5;
-      text-align: justify;
+      text-align: left;
       font-weight: 100;
           margin-top: 13px;
 }
 
 .team-slider .member-description-last {
-  font-size: 12px;
-  line-height: 1.3;
-  text-align: justify;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: left;
   font-weight: 100;
   margin-top: 13px;
 }
@@ -1420,9 +1421,11 @@ h2 {
 }
 .team-slider .swiper-slide .team-image, .team-image-active {
     max-width: 250px;
+    max-height: 376px;
 }
 .hk-team .hk-central_block>div.not-relative {
     margin-top: 25px;
+    display: flex;
 }
 .team-slider {
     margin-top: 10px;
