--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,6 +34,7 @@ body {
   color: #ffffff;
   text-decoration: none;
   margin-top: 50px;
+  cursor: pointer;
 }
 
 .hk-subscribe:hover {
@@ -360,7 +361,7 @@ p.hk-about-descr {
   max-width: 400px;
 }
 
-.video-container {
+.video-container, .main-modal-container {
   position: absolute;
   top: 0;
   z-index: 8;
@@ -368,6 +369,60 @@ p.hk-about-descr {
   width: 100vw;
   height: 100vh;
 }
+
+.main-modal-container {
+  background: rgba(0, 0, 0, 0.95);
+  border-bottom: 5px solid #31a4b2;
+  top: -5px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-modal-content {
+  width: 40%;
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.modal-x-mark {
+  float: right;
+}
+
+.modal-form {
+  flex: 10
+}
+
+.modal-form-input {
+    width: 100%;
+    outline: none;
+    background: none;
+    font-size: 16px;
+    border: none;
+    line-height: 1.8;
+    border-bottom: 1px solid;
+    color: white;
+    padding-top: 15px;
+    opacity: 0.7;
+}
+
+.modal-form-desc {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 100;
+  color: #31a4b2;
+}
+
+.modal-submit-button {
+  border: none;
+  background: #31a4b2;
+  width: 150px;
+  height: 45px;
+  color: white;
+}
+
 
 #video-loader {
   width: 100%;
@@ -1189,6 +1244,7 @@ h2+hr {
 
 .advisor-image {
   width: 100px;
+  height: 100px;
   border-radius: 50%;
 }
 
