--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 body {
   width: 100%;
   height: 100%;
+
   position: relative;
   margin: 0;
   overflow-x: hidden;
@@ -22,6 +23,7 @@ body {
 }
 
 .hk-header {
+  margin: 0 240px;
   display: block;
   display: flex;
   align-items: center;
@@ -1440,7 +1442,8 @@ h2+hr {
 
 .team-slider .swiper-slide .team-image, .team-image-active {
   max-width: 280px;
-  height: 376px;
+  width: 260px;
+  height: auto;
   border-bottom: 1px solid #31a4b2;
 }
 
